--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f7f7f7;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  margin-top: 10rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 22rem;
+  height: 12rem;
+  background-color: #fff;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: 0.01rem solid #b4afaf;
 }
 
-.App-link {
-  color: #61dafb;
+.title-wrapper {
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.title-wrapper h1 {
+  font-size: 1.4rem;
+  color: gray;
+  font-weight: 600;
+
+  padding: 0.6rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-text {
+  width: 90%;
+  margin-bottom: 0.5rem;
+  font-size: 0.8rem;
+  padding: 0.35rem;
+
+}
+
+.input-text:focus{
+  outline: none;
+  border: 1px solid blue;
+}
+
+.wrapper-checkbox {
+  width: 90%;
+  display: grid;
+  margin-right: 1.3rem;
+}
+
+.checkbox {
+  border-bottom: 1px solid #c3c9c5;
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: row;
+  padding: 0.2rem;
+  gap: 0.2rem;
+  margin-bottom: 0.35rem;
+
+  align-items: center;
+}
+
+.checkbox:last-child {
+  border: none;
+  margin-bottom: 0.1rem;
+}
+
+.checkbox input{
+  width: 0.7rem;
+  height: 0.7rem;
+  border: 1px solid #ddd;
+  border-radius: 30%;
+
+}
+
+.footer {
+  width: 22rem;
+  height: 10rem;
+  display: grid;
+  grid-template-columns: 35% 35%;
+  gap: 5rem;
+  font-size: 0.6rem;
+  border-top: 1px solid #c3c9c5;
+  background-color: #dbffdf;
+}
+
+.footer-element:first-child{
+  margin-left: 0.2rem;
+}
+.footer-element {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
 }
